// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email with confirmation render a email input for B2B 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Work email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input for B2B 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Work email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with default params 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with default params 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with default value 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value="test@example.com"
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with default value 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value="test@example.com"
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with disabled fields 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         disabled
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with disabled fields 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         disabled
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with email error 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with email error 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with given description 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    some description
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with given description 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    some description
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with read only fields 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value o-forms__field-disabled"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input with read only fields 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value o-forms__field-disabled"
         data-trackable="field-email"
         aria-required="true"
         aria-describedby="email-description"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;
